изменения в стилизации и сетках

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <ul class="site-navigation">
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="delivery-purchase.html">Доставка и оплата</a></li>
-        <li><a href="about-us.html">О компании</a></li>
+        <li><a href="about-us.html">О Компании</a></li>
       </ul>
       <ul class="user-navigation">
         <li><input type="search" name="search">Поиск</li>
-        <li>
+        <li><a class="login-link" href="login.html">Вход</a>
           <section class="modal modal-login">
             <h2 class="visually-hidden">Личный кабинет</h2>
             <p>Вход</p>
@@ -97,7 +97,7 @@
               <span class="hits-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="40" height="40" alt="хит">
+              <img src="img/hit.png" width="62" height="62" alt="хит">
               <img src="img/icecream-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             </p>
           </a>
@@ -110,7 +110,7 @@
               <span class="hits-item-title">Сливочно-кофейное с кусочками шоколада</span>
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="40" height="40" alt="хит">
+              <img src="img/hit.png" width="62" height="62" alt="хит">
               <img src="img/icecream-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             </p>
           </a>
@@ -123,7 +123,7 @@
               <span class="hits-item-title">Сливочно-клубничное с присыпкой из белого шоколада</span>
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="40" height="40" alt="хит">
+              <img src="img/hit.png" width="62" height="62" alt="хит">
               <img src="img/icecream-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             </p>
           </a>
@@ -136,7 +136,7 @@
               <span class="hits-item-title">Сливочное крем-брюле с карамельной подливкой</span>
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="40" height="40" alt="хит">
+              <img src="img/hit.png" width="62" height="62" alt="хит">
               <img src="img/icecream-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             </p>
           </a>
@@ -188,7 +188,7 @@
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <p>
-        <img src="img/map.jpg" width="780" height="340" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        <img src="img/map.jpg" width="1200" height="433" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
       </p>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
