--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="main-header">
+    <div class="header-info">
+      <div class="main-logo">
+    <a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Логотип Gllacy Shop"></a>
+  </div>
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Логотип Gllacy Shop"></a>
       <ul class="site-navigation">
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="delivery-purchase.html">Доставка и оплата</a></li>
@@ -55,6 +59,7 @@
         <span class="phone-number">8 812 450-25-25</span>
       </p>
     </nav>
+  </div>
   </header>
   <main class="container">
     <h1 class="visually-hidden">Мороженое Gllacy</h1>
@@ -68,7 +73,9 @@
         <input type="radio" name="slider_check" class="slider_check" id="slider_check-3"><label for="slider_check-3"
           class="slider_label">3</label><div><img src="img/advertising-3.png" width="651" height="597" alt="Пломбир с помадкой и клубничный щербет">Пломбир с помадкой и клубничный щербет</div>
       </div>
+      <div class="button-advertising">
       <button class="button  button-choice" type="submit">Давайте оба!</button>
+    </div>
     </section>
     <section class="special-offers">
       <h2 class="visually-hidden">Акции</h2>
@@ -93,56 +100,51 @@
 
         <li class="hits-item">
           <a href="hits-item.html">
-            <h3>
-              <span class="hits-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+            <img src="img/hit.png" class="hits-item-logo" alt="хит">
+            <img src="img/icecream-1.png" class="hits-img" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+             <p class="hits-item-price">310 &#8381;/кг</p>
+            <h3 class="hits-item-title">
+              Сливочное с апельсиновым джемом и цитрусовой стружкой
             </h3>
-            <p class="hits-item-image">
-              <img src="img/hit.png" width="62" height="62" alt="хит">
-              <img src="img/icecream-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            </p>
           </a>
-          <p class="hits-item-price">310<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
 
         <li class="hits-item">
           <a href="hits-item.html">
-            <h3>
-              <span class="hits-item-title">Сливочно-кофейное с кусочками шоколада</span>
+            <img src="img/hit.png" class="hits-item-logo" alt="хит">
+              <img src="img/icecream-2.png" class="hits-img"" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="hits-item-price">380 &#8381;/кг</p>
+            <h3 class="hits-item-title">
+              Сливочно-кофейное с кусочками шоколада
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="62" height="62" alt="хит">
-              <img src="img/icecream-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            </p>
           </a>
-          <p class="hits-item-price">380<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
 
         <li class="hits-item">
           <a href="hits-item.html">
-            <h3>
-              <span class="hits-item-title">Сливочно-клубничное с присыпкой из белого шоколада</span>
+            <img src="img/hit.png" class="hits-item-logo" alt="хит">
+              <img src="img/icecream-3.png" class="hits-img"" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="hits-item-price">355 &#8381;/кг</p>
+            <h3 class="hits-item-title">
+              Сливочно-клубничное с присыпкой из белого шоколада
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="62" height="62" alt="хит">
-              <img src="img/icecream-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-            </p>
           </a>
-          <p class="hits-item-price">355<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
 
         <li class="hits-item">
           <a href="hits-item.html">
-            <h3>
-              <span class="hits-item-title">Сливочное крем-брюле с карамельной подливкой</span>
+            <img src="img/hit.png" class="hits-item-logo" alt="хит">
+              <img src="img/icecream-4.png" class="hits-img"" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="hits-item-price">415 &#8381;/кг</p>
+            <h3 class="hits-item-title">
+              Сливочное крем-брюле с карамельной подливкой
             </h3>
             <p class="hits-item-image">
-              <img src="img/hit.png" width="62" height="62" alt="хит">
-              <img src="img/icecream-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-            </p>
           </a>
-          <p class="hits-item-price">415<img src="img/ruble.svg">/<span>кг</span></p>
         </li>
-      </ul>
+         </ul>
     </section>
     <section class="our-advantages">
       <h2>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
@@ -152,13 +154,13 @@
             проверенных временем технологий.</p>
         </li>
         <li class="advantages-item">
-          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные
-            ингредиенты и добавки произведены из натурального экологически чистого сырья.</p>
-        </li>
-        <li class="advantages-item">
           <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
             долговременное сотрудничество.
           </p>
+        </li>
+         <li class="advantages-item">
+          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные
+            ингредиенты и добавки произведены из натурального экологически чистого сырья.</p>
         </li>
         <li class="advantages-item">
           <p>Доставка нашего мороженого до заказчика осуществляется в специальном термопаке, который не дает мороженому растаять
@@ -173,6 +175,7 @@
         <p class="blog-entry-image"></p>
       </section>
       <section class="subscribe">
+        <div class="subscribe-layer">
         <p>Подпишитесь на нашу рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить
           и не слать всякой ненужной ерунды. Честно =)</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="post">
@@ -183,17 +186,16 @@
           </p>
           <button class="button button-choice" type="submit">Отправить</button>
         </form>
+      </div>
       </section>
     </section>
-    <section class="modal modal-map">
+
+    <section class="map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <p>
         <img src="img/map.jpg" width="1200" height="433" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
       </p>
-      <button class="modal-close" type="button">Закрыть</button>
-    </section>
-
-    <section class="feedback">
+      <section class="feedback">
       <p>Адрес главного офиса<br> и оффлайн-магазина: <br>
         <span class="coordinates">ул. Большая Конюшенная<br>19/8, Санкт-Петербург</span>
       </p>
@@ -201,30 +203,39 @@
         Для заказов по телефону:<br>
         <span class="coordinates">8 812 450-25-25</span><br> (с 10 до 20 ежедневно)
       </p>
+      <button class="button button-choice" type="submit">Форма обратной связи</button>
+    </section>
+    </section>
+
+    <section class="modal modal-feedback">
+      <h2>Мы обязательно вам ответим!</h2>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="feedback-item">
-          <label for="telephone-number">Телефон</label>
-          <input id="telephone-number" type="text" name="telehone-number" value="" placeholder="+7xxx xx xx">
+          <label class="visually-hidden" for="name">Имя</label>
+          <input id="name" type="text" name="name" value="" placeholder="Как вас зовут?">
         </p>
         <p class="feedback-item">
-          <label for="email">e-mail</label>
-          <input id="email" type="text" name="email" value="" placeholder="e-mail">
+          <label class="visually-hidden" for="email">e-mail</label>
+          <input id="email" type="text" name="email" value="" placeholder="Ваша почта для ответа?">
         </p>
         <p class="feedback-item">
-          <label for="comment">Комментарий</label>
-          <textarea name="comment" id="comment" rows=5></textarea>
+          <label class="visually-hidden" for="comment">Комментарий</label>
+          <textarea name="comment" id="comment" rows=5 placeholder="Напишите что-нибудь..."></textarea>
+        <button class="button button-choice" type="submit">Отправить</button>
         </p>
-        <button class="button button-choice" type="submit">Форма обратной связи</button>
+        <button class="modal-close" type="button">Закрыть</button>
       </form>
+      
     </section>
+    
   </main>
   <footer class="main-footer">
     <div class="footer-social">
       <ul class="footer-social">
-        <li><a class="social-button" href="#">Твиттер</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span><img src="img/twitter.svg" width="38" height="38"></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span><img src="img/instagram.svg" width="38" height="38"></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden"> Фейсбук</span><img src="img/fb.svg" width="38" height="38"></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span><img src="img/vk.svg" width="38" height="38"></a></li>
       </ul>
     </div>
     <div class="footer-details">
@@ -235,10 +246,9 @@
         <li><a class="details-item" href="#">Экологические стандарты</a></li>
       </ul>
     </div>
-    <div>
-      <p class="footer-copyright">
+    <div class="footer-copyright">
+        <img src="img/logo-htmlacademy.svg" width="110px" heght="41px" alt="Лого html Academy">
         <b>Сделано в</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a> &#9400 2017.
-      </p>
     </div>
   </footer>
 </body>
