--- a/catalog.html
+++ b/catalog.html
@@ -4,27 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-     <link href="https://fonts.googleapis.com/<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 
     <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="inner-page">
-     <header class="main-header">
+      <header class="main-header">
     <div class="header-info">
       <div class="main-logo">
     <a class="main-header-logo" href="index.html"><img src="img/Logo.png" width="154" height="64" alt="Логотип Gllacy Shop"></a>
   </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="catalog.html">Каталог</a></li>
+        <li class="button-choice"><a href="catalog.html">Каталог</a></li>
         <li><a href="delivery-purchase.html">Доставка и оплата</a></li>
         <li><a href="about-us.html">О Компании</a></li>
       </ul>
       <ul class="user-navigation">
-        <li><input type="search" name="search">Поиск</li>
-        <li><a class="login-link" href="login.html">Вход</a>
+        <li><input type="search" name="search" class="visually-hidden"><span class="visually-hidden">Поиск</span></li>
+        <li><a class="login-link" href="login.html"><span class="entrance">Вход</span></a>
           <section class="modal modal-login">
             <h2 class="visually-hidden">Личный кабинет</h2>
             <p>Вход</p>
@@ -51,11 +51,11 @@
           </section>
         </li>
         <li>
-          <form>Корзина</form>
+          <form>Пусто</form>
         </li>
       </ul>
       <p class="header-contacts">
-        С 10 до 20, ежедневно<br>
+        <span class="time">С 10 до 20, ежедневно</span><br>
         <span class="phone-number">8 812 450-25-25</span>
       </p>
     </nav>
@@ -94,10 +94,14 @@
       <fieldset>
          <legend>Жирность:</legend>
          <div class="sort-background">
-         <input type="radio" name="fat-index" value="0%">
-         <input type="radio" name="fat-index" value="до 10%" checked>
-         <input type="radio" name="fat-index" value="до 30%">
-         <input type="radio" name="fat-index" value="выше 30%">
+         <input type="radio" name="fat-index" value="0%" id="fat0%">
+         <label for="fat0%"><img src="img/radio-off.svg" alt="кнопка" width="25" height="25"><span>0%</span></label>
+         <input type="radio" name="fat-index" value="до 10%" id="fat10%" checked>
+         <label for="fat10%"><img src="img/radio-off.svg" alt="кнопка" width="25" height="25">до 10%</label>
+         <input type="radio" name="fat-index" value="до 30%" id="fat30%">
+         <label for="fat30%"><img src="img/radio-off.svg" alt="кнопка" width="25" height="25">до 30%</label>
+         <input type="radio" name="fat-index" value="выше 30%" id="fat30%+">
+         <label for="fat30%+"><img src="img/radio-off.svg" alt="кнопка" width="25" height="25">выше 30%</label>
        </div>
       </fieldset>
     </div>
@@ -106,18 +110,18 @@
          <legend>Наполнители:</legend>
          <div class="sort-background">
          <ul class="fillers">
-            <li class="fill-with"><input type="checkbox" name="chocolate" checked><label for="chocolate">шоколадные</label></li>
-            <li class="fill-with"><input type="checkbox" name="sugar" checked><label for="sugar">сахарные присыпки</label></li>
-            <li class="fill-with"><input type="checkbox" name="fruits"><label for="fruits">фрукты</label></li>
-            <li class="fill-with"><input type="checkbox" name="syrups"><label for="syrups">сиропы</label></li>
-            <li class="fill-with"><input type="checkbox" name="jams"><label for="jams">джемы</label></li>
+            <li class="fill-with"><input type="checkbox" name="chocolate" id="chocolate" checked><label for="chocolate"><img class="img-checkbox">шоколадные</label></li>
+            <li class="fill-with"><input type="checkbox" name="sugar" id="sugar" checked><label for="sugar"><img src="img/checkbox-on.svg" alt="чекбокс" width="27" height="22">сахарные присыпки</label></li>
+            <li class="fill-with"><input type="checkbox" name="fruits" id="fruits"><label for="fruits"><img src="img/checkbox-off.svg" alt="чекбокс" width="22" height="22">фрукты</label></li>
+            <li class="fill-with"><input type="checkbox" name="syrups" id="syrups"><label for="syrups"><img src="img/checkbox-off.svg" alt="чекбокс" width="22" height="22">сиропы</label></li>
+            <li class="fill-with"><input type="checkbox" name="jams" id="jams"><label for="jams"><img src="img/checkbox-off.svg" alt="чекбокс" width="22" height="22">джемы</label></li>
          </ul>
        </div>
       </fieldset>
     </div>
       <div class="sort">
       <button type="submit" class="filter-button button">Применить</button>
-      </div>
+    </div>
   </div>
    </form>
 </section>
@@ -125,146 +129,123 @@
     <section class="articles-list">
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <p class="icecream-item-price">310 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-              </p>
           </a>
-          <p class="icecream-item-price">310 &#8381;/<span>кг</span></p>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+          <p class="icecream-item-price">380 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочно-кофейное с кусочками шоколада</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-              </p>
-            </a>
-          <p class="icecream-item-price">380 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+          </h3>
+                    <img src="img/icecream-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <p class="icecream-item-price">355 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочно-клубничное с присыпкой из белого шоколада</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              </p>
-            </a>
-          <p class="icecream-item-price">355 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+          <p class="icecream-item-price">415&#8381; /<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочное крем-брюле с карамельной подливкой</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-              </p>
-            </a>
-          <p class="icecream-item-price">415&#8381; /<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
-          <h3>
+                    <img src="img/icecream-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
+          <p class="icecream-item-price">325 &#8381;/<span>кг</span></p>
+           <h3>
             <span class="icecream-item-title">Сливочное с брусничным джемом</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
-              </p>
-            </a>
-          <p class="icecream-item-price">325 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+          <p class="icecream-item-price">410 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочно-черничное с цельными ягодами черники</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-              </p>
-            </a>
-          <p class="icecream-item-price">410 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+          <p class="icecream-item-price">375 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочно-лимонное с карамельной присыпкой</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-              </p>
-            </a>
-          <p class="icecream-item-price">375 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
-          <h3>
+                    <img src="img/icecream-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+          <p class="icecream-item-price">320 &#8381;/<span>кг</span></p>
+           <h3>
             <span class="icecream-item-title">Сливочное с шоколадной стружкой</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-              </p>
-            </a>
-          <p class="icecream-item-price">320 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+          <p class="icecream-item-price">440 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочно-ванильное с кусочками шоколада</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-              </p>
-            </a>
-          <p class="icecream-item-price">440 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-10.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+          <p class="icecream-item-price">435 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочное с ментоловым сиропом</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-10.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-              </p>
-            </a>
-          <p class="icecream-item-price">435 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+          <p class="icecream-item-price">355 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочное с кусочками черного шоколада</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-              </p>
-            </a>
-          <p class="icecream-item-price">355 &#8381;/<span>кг</span></p>
+        </a>
         </div>
 
         <div class="icecream-item">
           <a href="icecream-item.html">
+                    <img src="img/icecream-12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
+          <p class="icecream-item-price">420 &#8381;/<span>кг</span></p>
           <h3>
             <span class="icecream-item-title">Сливочное с мятным сиропом</span>
           </h3>
-          <p class="icecream-item-image">
-                    <img src="img/icecream-12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
-              </p>
-            </a>
-          <p class="icecream-item-price">420 &#8381;/<span>кг</span></p>
+        </a>
         </div>
       </section>
       <ul class="pagination-list">
@@ -273,6 +254,7 @@
                 <li class="pagination-item"><a href="#">3</a></li>
                 <li class="pagination-item"><a href="#">4</a></li>
                 <li class="pagination-item"><a href="#">5</a></li>
+                <li class="pagination-item"><a href="#"><img src="img/icon-right-small.svg" width="11" height="15" alt="иконка"></a></li>
                 </ul>
         </section>
     </main>
@@ -287,15 +269,19 @@
     </div>
     <div class="footer-details">
       <ul class="footer-details">
-        <li><a class="details-item" href="#">Для поставщиков</a></li>
-        <li><a class="details-item" href="#">О производстве</a></li>
-        <li><a class="details-item" href="#">Наши документы</a></li>
-        <li><a class="details-item" href="#">Экологические стандарты</a></li>
+        <li><a class="details-item" href="#"><p>Для поставщиков</p></a></li>
+        <li><a class="details-item" href="#"><p>Наши документы</p></a></li>
+        <li><a class="details-item" href="#"><p>О производстве</p></a></li>
+        <li><a class="details-item" href="#"><p>Экологические стандарты</p></a></li>
       </ul>
     </div>
     <div class="footer-copyright">
-        <img src="img/logo-htmlacademy.svg" width="110px" heght="41px" alt="Лого html Academy">
-        <b>Сделано в</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a> &#9400 2017.
+        <div class="footer-img">
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="110px" heght="41px" alt="Лого html Academy"></a>
+    </div>
+    <div class="footer-copyright-text">
+        <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#9400 2017</p>
+    </div>
     </div>
   </footer>
 </body>
