--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="https://fonts.googleapis.com/<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -23,8 +23,8 @@
         <li><a href="about-us.html">О Компании</a></li>
       </ul>
       <ul class="user-navigation">
-        <li><input type="search" name="search">Поиск</li>
-        <li><a class="login-link" href="login.html">Вход</a>
+        <li><input type="search" name="search" class="visually-hidden"><span class="visually-hidden">Поиск</span></li>
+        <li><a class="login-link" href="login.html"><span class="entrance">Вход</span></a>
           <section class="modal modal-login">
             <h2 class="visually-hidden">Личный кабинет</h2>
             <p>Вход</p>
@@ -51,11 +51,11 @@
           </section>
         </li>
         <li>
-          <form>Корзина</form>
+          <form>Пусто</form>
         </li>
       </ul>
       <p class="header-contacts">
-        С 10 до 20, ежедневно<br>
+        <span class="time">С 10 до 20, ежедневно</span><br>
         <span class="phone-number">8 812 450-25-25</span>
       </p>
     </nav>
@@ -240,15 +240,19 @@
     </div>
     <div class="footer-details">
       <ul class="footer-details">
-        <li><a class="details-item" href="#">Для поставщиков</a></li>
-        <li><a class="details-item" href="#">О производстве</a></li>
-        <li><a class="details-item" href="#">Наши документы</a></li>
-        <li><a class="details-item" href="#">Экологические стандарты</a></li>
+        <li><a class="details-item" href="#"><p>Для поставщиков</p></a></li>
+        <li><a class="details-item" href="#"><p>Наши документы</p></a></li>
+        <li><a class="details-item" href="#"><p>О производстве</p></a></li>
+        <li><a class="details-item" href="#"><p>Экологические стандарты</p></a></li>
       </ul>
     </div>
     <div class="footer-copyright">
-        <img src="img/logo-htmlacademy.svg" width="110px" heght="41px" alt="Лого html Academy">
-        <b>Сделано в</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a> &#9400 2017.
+        <div class="footer-img">
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="110px" heght="41px" alt="Лого html Academy"></a>
+    </div>
+    <div class="footer-copyright-text">
+        <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#9400 2017</p>
+    </div>
     </div>
   </footer>
 </body>
